Fix overflow issue with long words on Secondary Hero (#8747)
* Fix overflow issue with long words on Secondary Hero

* Address review comments

* Fix lint error

--- a/src/amo/components/SecondaryHero/styles.scss
+++ b/src/amo/components/SecondaryHero/styles.scss
@@ -35,6 +35,7 @@
   font-weight: normal;
   line-height: 1.333;
   margin: 0;
+  overflow-wrap: anywhere;
 
   .LoadingText {
     height: 1em;
@@ -42,6 +43,7 @@
 }
 
 .SecondaryHero-message-description {
+  overflow-wrap: anywhere;
   padding: $padding-page 0;
 
   @include respond-to(large) {
@@ -99,6 +101,7 @@
 .SecondaryHero-message-link,
 .SecondaryHero-module-description,
 .SecondaryHero-module-link {
+  overflow-wrap: anywhere;
   width: 100%;
 
   .LoadingText {
